- Network service response time can be monitored
- Added driver for HP A-series and V-series switches
- MIB compiler correctly handles REFERENCE keyword in agent capabilities section
- Oracle Tuxedo monitoring subagent
- Improved server performance with PostgreSQL
- Alias and MTU collected and stored for interfaces
- Management console:
    - New dashboard element "DCI summary table"
    - Cluster objects shown on status maps
- Android console:
    - Added date in X axis (graphs) when the time frame is greather that one day
    - Added 10 minutes, 12 hours, 5 days, 30 days, last year options in draw graph for last values tab (5, 7, and 30 days asks for confirmation of long task execution)
    - Fixed graphical problem (checkbox) in last values tab
    - Support for KitKat Wear and Lollipop, updated support library v4
- Fixed issues: #61, #306, #381, #488, #565, #628, #634, #667, #672, #673, #674, #675, #677, #678, #679, #682, #684, #686, #688, #689, #691, #700, #704, #705, #709, #710


*
* 1.2.17
*

- New DCI source: NXSL script executed on server
- Configurable node matching policy for built-in syslog server (controlled by SyslogNodeMatchingPolicy configuration parameter)
- Oracle monitoring subagent improved (bugs fixed, new metrics)
- nxalarm tool supports commands add-comment and get-comments
- Source port number added to events generated from SNMP trap (available via "sourcePort" named parameter)
- Jira link: added possibility to set project's component for issues being created
- ICMP proxy can be set for nodes
- New methods in NXSL classes Node, Interface, and NetObj: setStatusCalculation and setStatusPropagation
- New attributes "slot" and "port" in NXSL class Interface
- Can execute arbitrary NXSL script in context of node, cluster, subnet, or container object from management console
- Improved network topology changes detection
- Added driver for H3C switches
- Management console:
    - Can show alarms for multiple selected objects